Fixes javaslang/javaslang#133