@@ -25,49 +25,49 @@ import static org.assertj.core.api.Assertions.assertThat;
 
 public class ListTest extends AbstractSeqTest implements Monad1Laws<Traversable<?>> {
 
-	@Override
-	protected <T> List<T> nil() {
-		return List.nil();
-	}
+    @Override
+    protected <T> List<T> nil() {
+        return List.nil();
+    }
 
-	@SuppressWarnings("unchecked")
-	@Override
-	protected <T> List<T> of(T... elements) {
-		return List.of(elements);
-	}
+    @SuppressWarnings("unchecked")
+    @Override
+    protected <T> List<T> of(T... elements) {
+        return List.of(elements);
+    }
 
-	// -- static collector()
+    // -- static collector()
 
-	@Test
-	public void shouldStreamAndCollectNil() {
-		final List<?> actual = List.nil().toJavaStream().collect(List.collector());
-		assertThat(actual).isEqualTo(List.nil());
-	}
+    @Test
+    public void shouldStreamAndCollectNil() {
+        final List<?> actual = List.nil().toJavaStream().collect(List.collector());
+        assertThat(actual).isEqualTo(List.nil());
+    }
 
-	@Test
-	public void shouldStreamAndCollectNonNil() {
-		final List<?> actual = List.of(1, 2, 3).toJavaStream().collect(List.collector());
-		assertThat(actual).isEqualTo(List.of(1, 2, 3));
-	}
+    @Test
+    public void shouldStreamAndCollectNonNil() {
+        final List<?> actual = List.of(1, 2, 3).toJavaStream().collect(List.collector());
+        assertThat(actual).isEqualTo(List.of(1, 2, 3));
+    }
 
-	@Test
-	public void shouldParallelStreamAndCollectNil() {
-		final List<?> actual = List.nil().toJavaStream().parallel().collect(List.collector());
-		assertThat(actual).isEqualTo(List.nil());
-	}
+    @Test
+    public void shouldParallelStreamAndCollectNil() {
+        final List<?> actual = List.nil().toJavaStream().parallel().collect(List.collector());
+        assertThat(actual).isEqualTo(List.nil());
+    }
 
-	@Test
-	public void shouldParallelStreamAndCollectNonNil() {
-		final List<?> actual = List.of(1, 2, 3).toJavaStream().parallel().collect(List.collector());
-		assertThat(actual).isEqualTo(List.of(1, 2, 3));
-	}
+    @Test
+    public void shouldParallelStreamAndCollectNonNil() {
+        final List<?> actual = List.of(1, 2, 3).toJavaStream().parallel().collect(List.collector());
+        assertThat(actual).isEqualTo(List.of(1, 2, 3));
+    }
 
-	// -- static nil()
+    // -- static nil()
 
-	@Test
-	public void shouldCreateNil() {
-		assertThat(List.nil()).isEqualTo(Nil.instance());
-	}
+    @Test
+    public void shouldCreateNil() {
+        assertThat(List.nil()).isEqualTo(Nil.instance());
+    }
 
     // -- static cons()
 
@@ -78,64 +78,64 @@ public class ListTest extends AbstractSeqTest implements Monad1Laws<Traversable<
 
     // -- static of(T...)
 
-	@Test
-	public void shouldCreateListOfElements() {
-		final List<Integer> actual = List.of(1, 2);
-		final List<Integer> expected = new Cons<>(1, new Cons<>(2, Nil.instance()));
-		assertThat(actual).isEqualTo(expected);
-	}
+    @Test
+    public void shouldCreateListOfElements() {
+        final List<Integer> actual = List.of(1, 2);
+        final List<Integer> expected = new Cons<>(1, new Cons<>(2, Nil.instance()));
+        assertThat(actual).isEqualTo(expected);
+    }
 
-	// -- static of(Iterable)
+    // -- static of(Iterable)
 
-	@Test
-	public void shouldCreateListOfIterable() {
-		final java.util.List<Integer> arrayList = Arrays.asList(1, 2, 3);
-		assertThat(List.of(arrayList)).isEqualTo(List.of(1, 2, 3));
-	}
+    @Test
+    public void shouldCreateListOfIterable() {
+        final java.util.List<Integer> arrayList = Arrays.asList(1, 2, 3);
+        assertThat(List.of(arrayList)).isEqualTo(List.of(1, 2, 3));
+    }
 
-	// -- static rangeClosed(int, int)
+    // -- static rangeClosed(int, int)
 
-	@Test
-	public void shouldCreateListOfRangeWhereFromIsGreaterThanTo() {
-		assertThat(List.rangeClosed(1, 0)).isEqualTo(List.nil());
-	}
+    @Test
+    public void shouldCreateListOfRangeWhereFromIsGreaterThanTo() {
+        assertThat(List.rangeClosed(1, 0)).isEqualTo(List.nil());
+    }
 
-	@Test
-	public void shouldCreateListOfRangeWhereFromEqualsTo() {
-		assertThat(List.rangeClosed(0, 0)).isEqualTo(List.of(0));
-	}
+    @Test
+    public void shouldCreateListOfRangeWhereFromEqualsTo() {
+        assertThat(List.rangeClosed(0, 0)).isEqualTo(List.of(0));
+    }
 
-	@Test
-	public void shouldCreateListOfRangeWhereFromIsLessThanTo() {
-		assertThat(List.rangeClosed(1, 3)).isEqualTo(List.of(1, 2, 3));
-	}
+    @Test
+    public void shouldCreateListOfRangeWhereFromIsLessThanTo() {
+        assertThat(List.rangeClosed(1, 3)).isEqualTo(List.of(1, 2, 3));
+    }
 
-	@Test
-	public void shouldCreateListOfRangeWhereFromEqualsToEqualsInteger_MIN_VALUE() {
-		assertThat(List.rangeClosed(Integer.MIN_VALUE, Integer.MIN_VALUE)).isEqualTo(List.of(Integer.MIN_VALUE));
-	}
+    @Test
+    public void shouldCreateListOfRangeWhereFromEqualsToEqualsInteger_MIN_VALUE() {
+        assertThat(List.rangeClosed(Integer.MIN_VALUE, Integer.MIN_VALUE)).isEqualTo(List.of(Integer.MIN_VALUE));
+    }
 
-	// -- static range(int, int)
+    // -- static range(int, int)
 
-	@Test
-	public void shouldCreateListOfUntilWhereFromIsGreaterThanTo() {
-		assertThat(List.range(1, 0)).isEqualTo(List.nil());
-	}
+    @Test
+    public void shouldCreateListOfUntilWhereFromIsGreaterThanTo() {
+        assertThat(List.range(1, 0)).isEqualTo(List.nil());
+    }
 
-	@Test
-	public void shouldCreateListOfUntilWhereFromEqualsTo() {
-		assertThat(List.range(0, 0)).isEqualTo(List.nil());
-	}
+    @Test
+    public void shouldCreateListOfUntilWhereFromEqualsTo() {
+        assertThat(List.range(0, 0)).isEqualTo(List.nil());
+    }
 
-	@Test
-	public void shouldCreateListOfUntilWhereFromIsLessThanTo() {
-		assertThat(List.range(1, 3)).isEqualTo(List.of(1, 2));
-	}
+    @Test
+    public void shouldCreateListOfUntilWhereFromIsLessThanTo() {
+        assertThat(List.range(1, 3)).isEqualTo(List.of(1, 2));
+    }
 
-	@Test
-	public void shouldCreateListOfUntilWhereFromEqualsToEqualsInteger_MIN_VALUE() {
-		assertThat(List.range(Integer.MIN_VALUE, Integer.MIN_VALUE)).isEqualTo(List.nil());
-	}
+    @Test
+    public void shouldCreateListOfUntilWhereFromEqualsToEqualsInteger_MIN_VALUE() {
+        assertThat(List.range(Integer.MIN_VALUE, Integer.MIN_VALUE)).isEqualTo(List.nil());
+    }
 
     // -- combinations
 
@@ -156,37 +156,37 @@ public class ListTest extends AbstractSeqTest implements Monad1Laws<Traversable<
 
     // -- unapply
 
-	@Test
-	public void shouldUnapplyNil() {
-		assertThat(Nil.instance().unapply()).isEqualTo(Tuple.empty());
-	}
+    @Test
+    public void shouldUnapplyNil() {
+        assertThat(Nil.instance().unapply()).isEqualTo(Tuple.empty());
+    }
 
-	@Test
-	public void shouldUnapplyCons() {
-		assertThat(List.of(1, 2, 3).unapply()).isEqualTo(Tuple.of(1, List.of(2, 3)));
-	}
+    @Test
+    public void shouldUnapplyCons() {
+        assertThat(List.of(1, 2, 3).unapply()).isEqualTo(Tuple.of(1, List.of(2, 3)));
+    }
 
-	// -- toString
+    // -- toString
 
-	@Test
-	public void shouldStringifyNil() {
-		assertThat(this.nil().toString()).isEqualTo("List()");
-	}
+    @Test
+    public void shouldStringifyNil() {
+        assertThat(this.nil().toString()).isEqualTo("List()");
+    }
 
-	@Test
-	public void shouldStringifyNonNil() {
-		assertThat(this.of(1, 2, 3).toString()).isEqualTo("List(1, 2, 3)");
-	}
+    @Test
+    public void shouldStringifyNonNil() {
+        assertThat(this.of(1, 2, 3).toString()).isEqualTo("List(1, 2, 3)");
+    }
 
-	// -- Cons test
+    // -- Cons test
 
-	@Test(expected = InvalidObjectException.class)
-	public void shouldNotSerializeEnclosingClass() throws Throwable {
-		Serializables.callReadObject(List.of(1));
-	}
+    @Test(expected = InvalidObjectException.class)
+    public void shouldNotSerializeEnclosingClass() throws Throwable {
+        Serializables.callReadObject(List.of(1));
+    }
 
-	@Test(expected = InvalidObjectException.class)
-	public void shouldNotDeserializeListWithSizeLessThanOne() throws Throwable {
+    @Test(expected = InvalidObjectException.class)
+    public void shouldNotDeserializeListWithSizeLessThanOne() throws Throwable {
         try {
             /*
              * This implementation is stable regarding jvm impl changes of object serialization. The index of the
@@ -217,7 +217,7 @@ public class ListTest extends AbstractSeqTest implements Monad1Laws<Traversable<
         } catch (IllegalStateException x) {
             throw (x.getCause() != null) ? x.getCause() : x;
         }
-	}
+    }
 
     // -- Functor1Laws
 
